16 add display favorites

--- a/public/css/samazon.css
+++ b/public/css/samazon.css
@@ -200,3 +200,9 @@ label {
     cursor: pointer;
     cursor: hand;
 }
+
+.samazon-favorite-add-cart {
+    border-radius: 2px;
+    background-color: #0fbe9f;
+    font-size: 12px;
+}
